# rviz_fps_plugin

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  plugin_description.xml
include/: fps_motion_config_widget.h  fps_motion_tool.h  fps_motion_view_controller.h
rviz/: example.rviz
src/: fps_motion_config_widget.cpp  fps_motion_tool.cpp  fps_motion_view_controller.cpp
